Aemet-Java v0.1